--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,7 @@
 
             <div class="footer">
                 <p>
-                    <a href="http://dept.example.edu/">Illustrious Department</a>
-                    at the
-                    <a href="http://example.edu/">University of Example</a>
+                    <a href="http://https://github.com/rcanzanese/datafusionlab.org">Site Source on GitHub</a>
                 </p>
             </div>
 
